# weather-mcp-server

./: .gitignore  CLAUDE_DESKTOP_SETUP.md  DEPLOYMENT.md  Dockerfile.aifs  Dockerfile.mcp  GUIDEME.md  HTTP_TRANSPORT.md  LICENSE  Makefile  README.md  aifs_config.yaml  aifs_server.py  claude_desktop_config.json  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  run.sh  start_weather_mcp.sh
config/: claude_desktop_http.json  claude_desktop_stdio.json  weather_config.yaml
examples/: curl_examples.sh  http_example.py  web_interface.html
tests/: __init__.py  conftest.py  run_tests.py  test_aifs_client.py  test_deployment.py  test_integration.py  test_mcp_server.py
weather_mcp/: aifs_client.py  config.py  eumetsat_client.py  graphcast_client.py  http_server.py  http_transport.py  mcp_server.py  mcp_server_v2.py  prediction_ensemble.py  test_apis.py  test_http_client.py
